apps/music-server/deemix.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deemix
  namespace: music-server
spec:
  selector:
    matchLabels:
      app: deemix
  template:
    metadata:
      labels:
        app: deemix
    spec:
      containers:
      - name: deemix
        image: eversunny/deemix-gui:latest
        ports:
        - containerPort: 6595
        volumeMounts:
        - name: music-data
          mountPath: /music
        - name: deemix-config
          mountPath: /config
      volumes:
      - name: music-data
        persistentVolumeClaim:
          claimName: music-pvc
      - name: deemix-config
        persistentVolumeClaim:
          claimName: deemix-config-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: deemix-service
  namespace: music-server
spec:
  selector:
    app: deemix
  ports:
    - protocol: TCP
      port: 80
      targetPort: 6595
