apps/music-server/spotdl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spotdl
  namespace: music-server
spec:
  selector:
    matchLabels:
      app: spotdl
  template:
    metadata:
      labels:
        app: spotdl
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - navidrome
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: spotdl
        image: spotdl/spotify-downloader
        args: ["web", "--host", "0.0.0.0"]
        ports:
        - containerPort: 8800
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "1Gi"
            cpu: "1000m"
        readinessProbe:
          tcpSocket:
            port: 8800
          initialDelaySeconds: 15
          periodSeconds: 20
          failureThreshold: 5
        volumeMounts:
        - name: music-data
          mountPath: /music
        - name: spotdl-config
          mountPath: /root/.config/spotdl
        workingDir: /music
      volumes:
      - name: music-data
        persistentVolumeClaim:
          claimName: music-pvc
      - name: spotdl-config
        persistentVolumeClaim:
          claimName: spotdl-config-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: spotdl-service
  namespace: music-server
spec:
  selector:
    app: spotdl
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8800
