apps/music-server/metube-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metube-ingress
  namespace: music-server
spec:
  ingressClassName: tailscale
  tls:
  - hosts:
    - metube
  rules:
  - host: metube
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: metube-service
            port:
              number: 80
