apps/music-server/spotdl-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spotdl-ingress
  namespace: music-server
spec:
  ingressClassName: tailscale
  tls:
  - hosts:
    - spotdl
  rules:
  - host: spotdl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spotdl-service
            port:
              number: 80
